fix: Fix the workflow Id.
It can only have alphanumerics, underscores and dashes.

--- a/.github/workflows/add_to_swg_project.yml
+++ b/.github/workflows/add_to_swg_project.yml
@@ -10,7 +10,7 @@ on:
     types: [opened]
 
 jobs:
-  Add an issue to project:
+  Add_an_issue_to_project:
     uses: openedx/.github/.github/workflows/add-issue-to-a-project.yml@master
     secrets:
       GITHUB_APP_ID: ${{ secrets.GRAPHQL_AUTH_APP_ID }}
